--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
           <h1>Sailing <span class="and">&amp; </span>adventure</h1>
           <h3>boats and sea</h3>
           <div class="banner-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a
+            <a href="#"><i class="fab fa-facebook"></i>
+
+
+            </i></a
             ><a href="#"><i class="fab fa-instagram"></i></a
-            ><a href="#"><i class="fab fa-pinterest-p"></i></a>
+            ><a href="#"><i class="fab fa-pinterest"></i></a>
           </div>
         </div>
       </div>
@@ -152,9 +155,13 @@
 
     <footer>
       <div class="footer-icons">
-        <a href="#"><i class="fab fa-facebook-f"></i></a
+        <a href="#"><i class="fab fa-facebook-square"></i>
+
+        </i></a
         ><a href="#"><i class="fab fa-instagram"></i></a
-        ><a href="#"><i class="fab fa-pinterest-p"></i></a>
+        ><a href="#"><i class="fab fa-pinterest-square"></i>
+
+        </a>
       </div>
       <p>Copyright@Sailing.All rights reserved</p>
     </footer>
